@@ -27,93 +27,108 @@ package com.questhelper.helpers.miniquests.daddyshome;
 import com.questhelper.collections.ItemCollections;
 import com.questhelper.panel.PanelDetails;
 import com.questhelper.questhelpers.BasicQuestHelper;
-import com.questhelper.requirements.Requirement;
-import com.questhelper.requirements.conditional.Conditions;
 import com.questhelper.requirements.item.ItemRequirement;
+import static com.questhelper.requirements.util.LogicHelper.and;
 import com.questhelper.requirements.var.VarbitRequirement;
 import com.questhelper.rewards.ExperienceReward;
 import com.questhelper.rewards.ItemReward;
-import com.questhelper.steps.*;
+import com.questhelper.steps.ConditionalStep;
+import com.questhelper.steps.NpcStep;
+import com.questhelper.steps.ObjectStep;
+import com.questhelper.steps.QuestStep;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import net.runelite.api.Skill;
 import net.runelite.api.coords.WorldPoint;
 import net.runelite.api.gameval.ItemID;
 import net.runelite.api.gameval.NpcID;
 import net.runelite.api.gameval.ObjectID;
 
-import java.util.*;
-
 public class DaddysHome extends BasicQuestHelper
 {
-	//Items Required
-	ItemRequirement plank10, nails20, bolt5, hammer, saw, waxwoodLog3, waxwoodPlank3, bolt2,
-		bolt3, nails2, nails4, plank, plank3, plank2;
+	// Required items
+	ItemRequirement plank10;
+	ItemRequirement nails20;
+	ItemRequirement bolt5;
+	ItemRequirement saw;
+	ItemRequirement hammer;
 
-	//Items Recommended
-	ItemRequirement lumberyardTeleport, varrockTeleport3;
+	// Recommended items
+	ItemRequirement lumberyardTeleport;
+	ItemRequirement varrockTeleport3;
 
-	Requirement removedChair, removedTable, removedTable2, removedStool, removedStool2, removedCampbed,
-		removedCarpet, repairedCampbed, repairedCarpet, repairedStool, repairedTable, repairedChair,
-		repairedStool2, repairedTable2;
+	// Miscellaneous requirements
+	ItemRequirement waxwoodLog3;
+	ItemRequirement waxwoodPlank3;
+	ItemRequirement bolt2;
+	ItemRequirement bolt3;
+	ItemRequirement nails2;
+	ItemRequirement nails4;
+	ItemRequirement plank;
+	ItemRequirement plank3;
+	ItemRequirement plank2;
 
-	//NPC Steps
-	DetailedQuestStep talkToMarlo, talkToYarlo, talkToYarloAgain, talkToOperator, talkToYarloOnceMore, talkToMarloToFinish;
+	VarbitRequirement removedChair;
+	VarbitRequirement removedTable;
+	VarbitRequirement removedTable2;
+	VarbitRequirement removedStool;
+	VarbitRequirement removedStool2;
+	VarbitRequirement removedCampbed;
+	VarbitRequirement removedCarpet;
+	VarbitRequirement repairedCampbed;
+	VarbitRequirement repairedCarpet;
+	VarbitRequirement repairedStool;
+	VarbitRequirement repairedTable;
+	VarbitRequirement repairedChair;
+	VarbitRequirement repairedStool2;
+	VarbitRequirement repairedTable2;
 
-	//Object/items Steps
-	DetailedQuestStep removeChair, removeCarpet, removeStool, removeStool2, removeTable,
-		removeTable2, removeCampbed, searchCrate, buildChair, buildCarpet, buildStool,
-		buildStool2, buildTable, buildTable2, buildCampbed;
-
-	@Override
-	public Map<Integer, QuestStep> loadSteps()
-	{
-		initializeRequirements();
-		setupConditions();
-		setupSteps();
-		Map<Integer, QuestStep> steps = new HashMap<>();
-
-		steps.put(0, talkToMarlo);
-		steps.put(1, talkToYarlo);
-
-		ConditionalStep removeItems = new ConditionalStep(this, removeCampbed);
-		removeItems.addStep(new Conditions(removedCampbed, removedCarpet, removedStool, removedTable, removedChair, removedStool2, removedTable2), talkToYarloAgain);
-		removeItems.addStep(new Conditions(removedCampbed, removedCarpet, removedStool, removedTable, removedChair, removedStool2), removeTable2);
-		removeItems.addStep(new Conditions(removedCampbed, removedCarpet, removedStool, removedTable, removedChair), removeStool2);
-		removeItems.addStep(new Conditions(removedCampbed, removedCarpet, removedStool, removedTable), removeChair);
-		removeItems.addStep(new Conditions(removedCampbed, removedCarpet, removedStool), removeTable);
-		removeItems.addStep(new Conditions(removedCampbed, removedCarpet), removeStool);
-		removeItems.addStep(removedCampbed, removeCarpet);
-
-		steps.put(2, removeItems);
-		steps.put(3, talkToYarloAgain);
-		steps.put(4, talkToYarloAgain);
-
-		ConditionalStep repairFurniture = new ConditionalStep(this, buildCarpet);
-		repairFurniture.addStep(new Conditions(repairedCarpet, repairedStool, repairedTable, repairedChair, repairedStool2, repairedTable2, repairedCampbed), talkToYarloOnceMore);
-		repairFurniture.addStep(new Conditions(repairedCarpet, repairedStool, repairedTable, repairedChair, repairedStool2, repairedTable2, waxwoodPlank3), buildCampbed);
-		repairFurniture.addStep(new Conditions(repairedCarpet, repairedStool, repairedTable, repairedChair, repairedStool2, repairedTable2, waxwoodLog3), talkToOperator);
-		repairFurniture.addStep(new Conditions(repairedCarpet, repairedStool, repairedTable, repairedChair, repairedStool2, repairedTable2), searchCrate);
-		repairFurniture.addStep(new Conditions(repairedCarpet, repairedStool, repairedTable, repairedChair, repairedStool2), buildTable2);
-		repairFurniture.addStep(new Conditions(repairedCarpet, repairedStool, repairedTable, repairedChair), buildStool2);
-		repairFurniture.addStep(new Conditions(repairedCarpet, repairedStool, repairedTable), buildChair);
-		repairFurniture.addStep(new Conditions(repairedCarpet, repairedStool), buildTable);
-		repairFurniture.addStep(new Conditions(repairedCarpet), buildStool);
-
-		steps.put(5, repairFurniture);
-		steps.put(6, repairFurniture);
-		steps.put(7, repairFurniture);
-		steps.put(8, repairFurniture);
-		steps.put(9, repairFurniture);
-
-		steps.put(10, talkToMarloToFinish);
-		steps.put(11, talkToMarloToFinish);
-		steps.put(12, talkToMarloToFinish);
-
-		return steps;
-	}
+	// Steps
+	NpcStep talkToMarlo;
+	NpcStep talkToYarlo;
+	NpcStep talkToYarloAgain;
+	NpcStep talkToOperator;
+	NpcStep talkToYarloOnceMore;
+	NpcStep talkToMarloToFinish;
+	ObjectStep removeChair;
+	ObjectStep removeCarpet;
+	ObjectStep removeStool;
+	ObjectStep removeStool2;
+	ObjectStep removeTable;
+	ObjectStep removeTable2;
+	ObjectStep removeCampbed;
+	ObjectStep searchCrate;
+	ObjectStep buildChair;
+	ObjectStep buildCarpet;
+	ObjectStep buildStool;
+	ObjectStep buildStool2;
+	ObjectStep buildTable;
+	ObjectStep buildTable2;
+	ObjectStep buildCampbed;
 
 	@Override
 	protected void setupRequirements()
 	{
+		removedCampbed = new VarbitRequirement(10568, 2);
+		removedCarpet = new VarbitRequirement(10569, 2);
+		removedStool = new VarbitRequirement(10564, 2);
+
+		removedTable = new VarbitRequirement(10567, 2);
+		removedChair = new VarbitRequirement(10565, 2);
+		removedStool2 = new VarbitRequirement(10563, 2);
+		removedTable2 = new VarbitRequirement(10566, 2);
+
+		repairedCampbed = new VarbitRequirement(10568, 3);
+		repairedCarpet = new VarbitRequirement(10569, 3);
+		repairedStool = new VarbitRequirement(10564, 3);
+
+		repairedTable = new VarbitRequirement(10567, 3);
+		repairedChair = new VarbitRequirement(10565, 3);
+		repairedStool2 = new VarbitRequirement(10563, 3);
+		repairedTable2 = new VarbitRequirement(10566, 3);
+
 		plank10 = new ItemRequirement("Plank", ItemID.WOODPLANK, 10);
 		bolt5 = new ItemRequirement("Bolt of cloth", ItemID.CLOTH, 5);
 		nails20 = new ItemRequirement("Nails (bring more in case you fail with some)", ItemCollections.NAILS, 14);
@@ -133,32 +148,10 @@ public class DaddysHome extends BasicQuestHelper
 		varrockTeleport3 = new ItemRequirement("Varrock Teleports", ItemID.POH_TABLET_VARROCKTELEPORT, 3);
 	}
 
-	public void setupConditions()
-	{
-
-		removedCampbed = new VarbitRequirement(10568, 2);
-		removedCarpet = new VarbitRequirement(10569, 2);
-		removedStool = new VarbitRequirement(10564, 2);
-
-		removedTable = new VarbitRequirement(10567, 2);
-		removedChair = new VarbitRequirement(10565, 2);
-		removedStool2 = new VarbitRequirement(10563, 2);
-		removedTable2 = new VarbitRequirement(10566, 2);
-
-		repairedCampbed = new VarbitRequirement(10568, 3);
-		repairedCarpet = new VarbitRequirement(10569, 3);
-		repairedStool = new VarbitRequirement(10564, 3);
-
-		repairedTable = new VarbitRequirement(10567, 3);
-		repairedChair = new VarbitRequirement(10565, 3);
-		repairedStool2 = new VarbitRequirement(10563, 3);
-		repairedTable2 = new VarbitRequirement(10566, 3);
-	}
-
 	public void setupSteps()
 	{
 		talkToMarlo = new NpcStep(this, NpcID.CON_CONTRACTOR_VARROCK_1OP, new WorldPoint(3241, 3471, 0), "Talk to Marlo in north east Varrock.");
-		((NpcStep) talkToMarlo).addAlternateNpcs(NpcID.CON_CONTRACTOR_VARROCK_2OP);
+		talkToMarlo.addAlternateNpcs(NpcID.CON_CONTRACTOR_VARROCK_2OP);
 		talkToMarlo.addDialogSteps("What kind of favour do you want me to do?", "Tell me more about the job.", "Tell me where he lives, and I'll do the job.");
 		talkToYarlo = new NpcStep(this, NpcID.DADDYSHOME_DADDY, new WorldPoint(3240, 3395, 0), "Talk to Old Man Yarlo in south Varrock.");
 		talkToYarloAgain = new NpcStep(this, NpcID.DADDYSHOME_DADDY, new WorldPoint(3240, 3395, 0), "Talk to Old Man Yarlo in south Varrock again.");
@@ -166,7 +159,7 @@ public class DaddysHome extends BasicQuestHelper
 		talkToYarloOnceMore = new NpcStep(this, NpcID.DADDYSHOME_DADDY, new WorldPoint(3240, 3395, 0), "Talk to Old Man Yarlo in south Varrock.");
 
 		talkToMarloToFinish = new NpcStep(this, NpcID.CON_CONTRACTOR_VARROCK_1OP, new WorldPoint(3241, 3471, 0), "Talk to Marlo in north east Varrock to complete the quest.");
-		((NpcStep) talkToMarloToFinish).addAlternateNpcs(NpcID.CON_CONTRACTOR_VARROCK_2OP);
+		talkToMarloToFinish.addAlternateNpcs(NpcID.CON_CONTRACTOR_VARROCK_2OP);
 		talkToMarloToFinish.addDialogStep("Yeah, what have you got for me?");
 
 		removeCampbed = new ObjectStep(this, ObjectID.DADDYSHOME_BED, new WorldPoint(3242, 3398, 0), "Remove the broken items in the house.");
@@ -195,27 +188,86 @@ public class DaddysHome extends BasicQuestHelper
 	}
 
 	@Override
+	public Map<Integer, QuestStep> loadSteps()
+	{
+		initializeRequirements();
+		setupSteps();
+
+		var steps = new HashMap<Integer, QuestStep>();
+
+		steps.put(0, talkToMarlo);
+		steps.put(1, talkToYarlo);
+
+		var removeItems = new ConditionalStep(this, removeCampbed);
+		removeItems.addStep(and(removedCampbed, removedCarpet, removedStool, removedTable, removedChair, removedStool2, removedTable2), talkToYarloAgain);
+		removeItems.addStep(and(removedCampbed, removedCarpet, removedStool, removedTable, removedChair, removedStool2), removeTable2);
+		removeItems.addStep(and(removedCampbed, removedCarpet, removedStool, removedTable, removedChair), removeStool2);
+		removeItems.addStep(and(removedCampbed, removedCarpet, removedStool, removedTable), removeChair);
+		removeItems.addStep(and(removedCampbed, removedCarpet, removedStool), removeTable);
+		removeItems.addStep(and(removedCampbed, removedCarpet), removeStool);
+		removeItems.addStep(removedCampbed, removeCarpet);
+
+		steps.put(2, removeItems);
+		steps.put(3, talkToYarloAgain);
+		steps.put(4, talkToYarloAgain);
+
+		var repairFurniture = new ConditionalStep(this, buildCarpet);
+		repairFurniture.addStep(and(repairedCarpet, repairedStool, repairedTable, repairedChair, repairedStool2, repairedTable2, repairedCampbed), talkToYarloOnceMore);
+		repairFurniture.addStep(and(repairedCarpet, repairedStool, repairedTable, repairedChair, repairedStool2, repairedTable2, waxwoodPlank3), buildCampbed);
+		repairFurniture.addStep(and(repairedCarpet, repairedStool, repairedTable, repairedChair, repairedStool2, repairedTable2, waxwoodLog3), talkToOperator);
+		repairFurniture.addStep(and(repairedCarpet, repairedStool, repairedTable, repairedChair, repairedStool2, repairedTable2), searchCrate);
+		repairFurniture.addStep(and(repairedCarpet, repairedStool, repairedTable, repairedChair, repairedStool2), buildTable2);
+		repairFurniture.addStep(and(repairedCarpet, repairedStool, repairedTable, repairedChair), buildStool2);
+		repairFurniture.addStep(and(repairedCarpet, repairedStool, repairedTable), buildChair);
+		repairFurniture.addStep(and(repairedCarpet, repairedStool), buildTable);
+		repairFurniture.addStep(repairedCarpet, buildStool);
+
+		steps.put(5, repairFurniture);
+		steps.put(6, repairFurniture);
+		steps.put(7, repairFurniture);
+		steps.put(8, repairFurniture);
+		steps.put(9, repairFurniture);
+
+		steps.put(10, talkToMarloToFinish);
+		steps.put(11, talkToMarloToFinish);
+		steps.put(12, talkToMarloToFinish);
+
+		return steps;
+	}
+
+	@Override
 	public List<ItemRequirement> getItemRequirements()
 	{
-		return Arrays.asList(plank10, nails20, bolt5, saw, hammer);
+		return List.of(
+			plank10,
+			nails20,
+			bolt5,
+			saw,
+			hammer
+		);
 	}
 
 	@Override
 	public List<ItemRequirement> getItemRecommended()
 	{
-		return Arrays.asList(lumberyardTeleport, varrockTeleport3);
+		return List.of(
+			lumberyardTeleport,
+			varrockTeleport3
+		);
 	}
 
 	@Override
 	public List<ExperienceReward> getExperienceRewards()
 	{
-		return Collections.singletonList(new ExperienceReward(Skill.CONSTRUCTION, 400));
+		return List.of(
+			new ExperienceReward(Skill.CONSTRUCTION, 400)
+		);
 	}
 
 	@Override
 	public List<ItemReward> getItemRewards()
 	{
-		return Arrays.asList(
+		return List.of(
 			new ItemReward("Planks", ItemID.WOODPLANK, 25),
 			new ItemReward("Oak Planks", ItemID.PLANK_OAK, 10),
 			new ItemReward("Mithril Nails", ItemID.NAILS_MITHRIL, 50),
@@ -223,14 +275,34 @@ public class DaddysHome extends BasicQuestHelper
 			new ItemReward("Bolt of Cloth", ItemID.CLOTH, 8),
 			new ItemReward("House Teleport Tablets", ItemID.POH_TABLET_TELEPORTTOHOUSE, 5),
 			new ItemReward("Falador Teleport Tablet", ItemID.POH_TABLET_FALADORTELEPORT, 1),
-			new ItemReward("POH in Rimmington or 1,000 Coins", ItemID.COINS, 1));
+			new ItemReward("POH in Rimmington or 1,000 Coins", ItemID.COINS, 1)
+		);
 	}
 
 	@Override
 	public List<PanelDetails> getPanels()
 	{
-		List<PanelDetails> allSteps = new ArrayList<>();
-		allSteps.add(new PanelDetails("Helping Yarlo & Marlo", Arrays.asList(talkToMarlo, talkToYarlo, removeCampbed, talkToYarloAgain, buildCarpet, searchCrate, talkToOperator, buildCampbed, talkToYarloOnceMore, talkToMarloToFinish), plank10, nails20, bolt5, hammer, saw));
-		return allSteps;
+		var sections = new ArrayList<PanelDetails>();
+
+		sections.add(new PanelDetails("Helping Yarlo & Marlo", List.of(
+			talkToMarlo,
+			talkToYarlo,
+			removeCampbed,
+			talkToYarloAgain,
+			buildCarpet,
+			searchCrate,
+			talkToOperator,
+			buildCampbed,
+			talkToYarloOnceMore,
+			talkToMarloToFinish
+		), List.of(
+			plank10,
+			nails20,
+			bolt5,
+			hammer,
+			saw
+		)));
+
+		return sections;
 	}
 }
